# CW_4

./: main.py  my_vacancy.json  pyproject.toml  readme.md
data/: my_vacancy.json
src/: abstract_classes.py  editing_vacancies.py  get_api_hh.py  save_to_fromat_file.py  tkinter_hh.py
